refactor business route
