# server/dummySrc/routes/business.js
@@ -1,28 +1,0 @@
-import express from 'express';
-import {
-  createBusiness,
-  updateBusiness,
-  deleteBusiness,
-  getBusiness,
-  getAllBusinesses
-} from './../controllers/businessController';
-import businessValidation from './../middlewares/businessMiddleware';
-
-const router = express.Router();
-
-// Get all businesses
-router.get('/', getAllBusinesses);
-
-// Get a business by businessId
-router.get('/:businessId', getBusiness);
-
-// Register a business
-router.post('/', businessValidation, createBusiness);
-
-// Update a business
-router.put('/:businessId', businessValidation, updateBusiness);
-
-// Remove a business
-router.delete('/:businessId', deleteBusiness);
-
-export default router;
