# server/src/middlewares/userMiddleware.js
@@ -113,11 +113,11 @@ export default class UserMiddleware {
 
   /**
    * findUserByEmail()
-   * @desc checks businesses by category
+   * @desc finds user by email
    * @param {Object} req request object
    * @param {Array} res allBusinesses array
    * @param {Object} next Express next middleware function
-   * @return {Array} business
+   * @return {Object} message
    */
   static findUserByEmail(req, res, next) {
     const { email } = req.body;
